# shiromana-cli

./: .gitignore  Cargo.toml
src/: command.rs  library.rs  main.rs  prompter.rs
