[package]
name = "shiromana-cli"
version = "0.1.0"
edition = "2018"

[features]
default = ["purge-every-time"]
purge-every-time = [] # Remove configuration file and library file every time.

[dependencies]
shiromana-rs = { path = "../shiromana-rs" }
dialoguer = "0.8.0"
indicatif = "0.16.0"
console = "0.14.1"
confy = { git = "https://github.com/Oyami-Srk/confy" }
#confy = { path = "crates/confy" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories-next = "2.0.0"
mime = "0.3.16"
tree_magic = "0.2.3"
lazy_static = "1.4.0"

[dependencies.clap]
version = "3.0.0-beta.2"
default-features = true
features = [ "suggestions", "color", "derive"]